// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultToast component testing DefaultToast error 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ebIPid"
    style="height: 8px;"
  >
    <div
      class="sc-gsnTZi eoDwOP"
      opacity="1"
      transform="translate3d(0,0,0)"
    >
      <div
        class="sc-jSMfEi lgNPem"
        display="flex"
      >
        <div
          class="sc-jSMfEi itoMZN"
          display="flex"
        >
          <div
            class="sc-dkzDqf kXpBi"
          >
            <span
              class="sc-gKXOVf fmZGCL"
              size="24"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0,0H24V24H0Z"
                  fill="none"
                />
                <path
                  d="M12.866,3l9.526,16.5a1,1,0,0,1-.866,1.5H2.474a1,1,0,0,1-.866-1.5L11.134,3a1,1,0,0,1,1.732,0ZM11,16v2h2V16Zm0-7v5h2V9Z"
                  fill="#EB0A4E"
                />
              </svg>
            </span>
          </div>
          <p
            class="sc-iBkjds idbXdJ"
            color="#A90556"
            font-size="14px"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hKMtZM jCCKuz"
        >
          <span
            class="sc-gKXOVf kFgTzX"
            size="18"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.9997 10.5865L16.9495 5.63672L18.3637 7.05093L13.4139 12.0007L18.3637 16.9504L16.9495 18.3646L11.9997 13.4149L7.04996 18.3646L5.63574 16.9504L10.5855 12.0007L5.63574 7.05093L7.04996 5.63672L11.9997 10.5865Z"
                fill="#F96979"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="sc-eCYdqJ klZjQd"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DefaultToast component testing DefaultToast info 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ebIPid"
    style="height: 8px;"
  >
    <div
      class="sc-gsnTZi eJtHPo"
      opacity="1"
      transform="translate3d(0,0,0)"
    >
      <div
        class="sc-jSMfEi lgNPem"
        display="flex"
      >
        <div
          class="sc-jSMfEi itoMZN"
          display="flex"
        >
          <div
            class="sc-dkzDqf kXpBi"
          >
            <span
              class="sc-gKXOVf fmZGCL"
              size="24"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                />
                <path
                  d="M16723,12664a10,10,0,1,1,10-10A9.937,9.937,0,0,1,16723,12664Zm-1-11h0v5h2v-5Zm0-4h0v2h2v-2Z"
                  fill="#0B82F4"
                  transform="translate(-16711 -12642)"
                />
              </svg>
            </span>
          </div>
          <p
            class="sc-iBkjds gATKuv"
            color="#054BAF"
            font-size="14px"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hKMtZM jCCKuz"
        >
          <span
            class="sc-gKXOVf kFgTzX"
            size="18"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.9997 10.5865L16.9495 5.63672L18.3637 7.05093L13.4139 12.0007L18.3637 16.9504L16.9495 18.3646L11.9997 13.4149L7.04996 18.3646L5.63574 16.9504L10.5855 12.0007L5.63574 7.05093L7.04996 5.63672L11.9997 10.5865Z"
                fill="#9CDDFD"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="sc-eCYdqJ kDDhKw"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DefaultToast component testing DefaultToast success 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ebIPid"
    style="height: 8px;"
  >
    <div
      class="sc-gsnTZi pCCCm"
      opacity="1"
      transform="translate3d(0,0,0)"
    >
      <div
        class="sc-jSMfEi lgNPem"
        display="flex"
      >
        <div
          class="sc-jSMfEi itoMZN"
          display="flex"
        >
          <div
            class="sc-dkzDqf kXpBi"
          >
            <span
              class="sc-gKXOVf fmZGCL"
              size="24"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 22C6.477 22 2 17.523 2 12C2 6.477 6.477 2 12 2C17.523 2 22 6.477 22 12C22 17.523 17.523 22 12 22ZM10.886 16.7533L17.956 9.68226L16.542 8.26826L10.886 13.9253L8.05701 11.0963L6.64302 12.5103L10.886 16.7533Z"
                  fill="#63C427"
                />
              </svg>
            </span>
          </div>
          <p
            class="sc-iBkjds gATEzB"
            color="#338D13"
            font-size="14px"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hKMtZM jCCKuz"
        >
          <span
            class="sc-gKXOVf kFgTzX"
            size="18"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.9997 10.5865L16.9495 5.63672L18.3637 7.05093L13.4139 12.0007L18.3637 16.9504L16.9495 18.3646L11.9997 13.4149L7.04996 18.3646L5.63574 16.9504L10.5855 12.0007L5.63574 7.05093L7.04996 5.63672L11.9997 10.5865Z"
                fill="#B4ED7B"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="sc-eCYdqJ fKPeOl"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DefaultToast component testing DefaultToast warning 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ebIPid"
    style="height: 8px;"
  >
    <div
      class="sc-gsnTZi WPFfa"
      opacity="1"
      transform="translate3d(0,0,0)"
    >
      <div
        class="sc-jSMfEi lgNPem"
        display="flex"
      >
        <div
          class="sc-jSMfEi itoMZN"
          display="flex"
        >
          <div
            class="sc-dkzDqf kXpBi"
          >
            <span
              class="sc-gKXOVf fmZGCL"
              size="24"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0,0H24V24H0Z"
                  fill="none"
                />
                <path
                  d="M12.866,3l9.526,16.5a1,1,0,0,1-.866,1.5H2.474a1,1,0,0,1-.866-1.5L11.134,3a1,1,0,0,1,1.732,0ZM11,16v2h2V16Zm0-7v5h2V9Z"
                  fill="#FCD914"
                />
              </svg>
            </span>
          </div>
          <p
            class="sc-iBkjds dLpBiE"
            color="#785F03"
            font-size="14px"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hKMtZM jCCKuz"
        >
          <span
            class="sc-gKXOVf kFgTzX"
            size="18"
          >
            <svg
              fill="none"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.9997 10.5865L16.9495 5.63672L18.3637 7.05093L13.4139 12.0007L18.3637 16.9504L16.9495 18.3646L11.9997 13.4149L7.04996 18.3646L5.63574 16.9504L10.5855 12.0007L5.63574 7.05093L7.04996 5.63672L11.9997 10.5865Z"
                fill="#FDE54E"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="sc-eCYdqJ jkVBoz"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;
